Add Payment Integration for Donations

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,22 @@ EMAIL_FROM=noreply@neverrelapse.com
 # For development testing, you can use Ethereal Email
 # EMAIL_USER=ethereal.user@ethereal.email
 # EMAIL_PASS=ethereal.pass
+
+# Payment Configuration
+# Stripe
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+
+# PayPal
+PAYPAL_MODE=sandbox
+PAYPAL_CLIENT_ID=your_paypal_client_id
+PAYPAL_CLIENT_SECRET=your_paypal_client_secret
+
+# M-Pesa (Safaricom)
+MPESA_CONSUMER_KEY=your_mpesa_consumer_key
+MPESA_CONSUMER_SECRET=your_mpesa_consumer_secret
+MPESA_SHORTCODE=your_business_shortcode
+MPESA_PASSKEY=your_mpesa_passkey
+
+# Server URL for callbacks
+SERVER_URL=http://localhost:5000
