--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
@@ -23,8 +24,10 @@
     "lucide-react": "^0.344.0",
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.7",
+    "paypal-rest-sdk": "^1.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "stripe": "^18.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
